# tomoJANAS

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  docs.yml
docs/: CLASS_REASSIGNMENT.md  ITERATIVE_SELECTION.md  accessory_utils.md  citation.md  custom_selected_stacks.md  examples_of_usage.md  index.md  installation.md  progress_dashboard.md  quick-start.md  sigma_estimate.md  troubleshooting.md
docs/examples/: empiar-10308.md
docs/reference/: cli.md  computational-requirements.md  star-operations.md
docs/workflows/: classification.md  cryosparc.md  cryosparc_star_recovery.md  selection.md
src/janas/: IO_utils.py  __init__.py  assessParticles.py  benchmarking_janas_cmd_session_manager.py  bin_wrapper.py  janas_alternative_selector.py  janas_cmd_caller.py  janas_cmd_optimizer.py  janas_cmd_session_manager.py  janas_cmd_utils.py  janas_mapProcess.py  janas_progress.py  janas_reconstructor.py  locres_utils.py  projector_utils.py  reconstructor_utils.py  setup_environment_shell.sh  starDisplay.py  starHandler.py  tomojanas_cmd_caller.py  utils.py  utils_csparc.py  version.py
src/src_cpp/: CsvStarReadWriteAnalyseLibs.h  ctfLibs.h  derivative_libs.h  euler_libs.h  imageProcessingLib.h  janas_app_meanMinMax.cxx  janas_app_starProcess.cxx  janas_core.cpp  matrix_computations.h  mrcIO.h  randomLibs.h  recline.c  scores.h
src/tomojanas/: __init__.py
src/tomojanas/geometry/: __init__.py  coordinates.py  imod_mapping.py  roi.py
src/tomojanas/importers/: __init__.py  cli.py  ctf_importer.py  imod_importer.py  particle_importer.py  status.py  validators.py
src/tomojanas/io/: __init__.py  logs.py  mrc.py  project_writer.py  star_reader.py  star_writer.py
src/tomojanas/metadata/: __init__.py  ctf.py  imod_com.py  imod_tlt.py  imod_xf.py  mdoc.py  relion_labels.py
src/tomojanas/models/: __init__.py  project.py
tests/: test_backmap_stars.py  test_clean_csparc_blob_path.py  test_create_stack_path_mode.py  test_csparc2star_missing_pose.py  test_custom_selected_stacks.py  test_eulerhist_show_flag.py  test_janas_progress.py  test_tomojanas_import.py  test_tomojanas_mrc.py
tutorial/: COMMON_OPERATIONS.md  INSTALL.md  INSTALL_FROM_SOURCE.md  README.md  accessory_programs.md  computational_requirements.md  cs_integration.md  import_stack_from_cs.md
tutorial/tables/: table1_computational_profile.tex  table2_wallclock.tex  table3_hardware.tex  table4_memory.tex
