[build-system]
requires = ["setuptools>=64", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build for CPython 3.8–3.12 on Linux and macOS
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_i686 *-manylinux_i686 pp*"

[tool.cibuildwheel.linux]
# Install build tools then pin CMake >=3.10 via pip (manylinux yum ships 2.8)
before-all = "if command -v yum >/dev/null 2>&1; then yum install -y gcc-c++; elif command -v apt-get >/dev/null 2>&1; then apt-get update && apt-get install -y g++; fi"
before-build = "pip install 'cmake>=3.10'"
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
# Windows requires CMake on PATH; GitHub Actions runners have it pre-installed
archs = ["AMD64"]
